# rumon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  rumon.toml  rustfmt.toml
.github/workflows/: release.yml
crates/rumon-cli/: Cargo.toml
crates/rumon-cli/src/: args.rs  bootstrap.rs  commands.rs  error.rs  lib.rs  main.rs
crates/rumon-config/: Cargo.toml
crates/rumon-config/src/: error.rs  event_hooks.rs  init.rs  lib.rs  loader.rs  merge.rs  schema.rs  validation.rs
crates/rumon-core/: Cargo.toml
crates/rumon-core/src/: change_detail.rs  error.rs  event_bus.rs  lib.rs  orchestrator.rs  output.rs  state.rs
crates/rumon-core/src/integrations/: ipc.rs  mod.rs  server.rs  stream.rs  watcher.rs
crates/rumon-diff/: Cargo.toml
crates/rumon-diff/src/: binary.rs  column_diff.rs  formatter.rs  lib.rs  line_diff.rs  preview.rs  text.rs
crates/rumon-hooks/: Cargo.toml
crates/rumon-hooks/src/: after_restart.rs  before_restart.rs  context.rs  executor.rs  lib.rs  lifecycle.rs  matcher.rs  on_failure.rs  on_success.rs  result.rs  runner.rs
crates/rumon-hooks/src/events/: event_type.rs  mod.rs
crates/rumon-hooks/src/rules/: ast.rs  error.rs  eval.rs  lexer.rs  mod.rs  parser.rs  value.rs
crates/rumon-media/: Cargo.toml
crates/rumon-media/src/: audio.rs  detector.rs  image.rs  lib.rs  metadata.rs  mime.rs  video.rs
crates/rumon-plugins/: Cargo.toml
crates/rumon-plugins/src/: lib.rs  manifest.rs
crates/rumon-profiles/: Cargo.toml
crates/rumon-profiles/src/: error.rs  lib.rs  loader.rs  overrides.rs  profile.rs  selector.rs
crates/rumon-protocol/: Cargo.toml
crates/rumon-protocol/src/: bus.rs  event.rs  lib.rs  ndjson.rs  schema.rs
crates/rumon-remote/: Cargo.toml
crates/rumon-remote/src/: auth.rs  client.rs  error.rs  lib.rs  protocol.rs  server.rs  session.rs  telemetry.rs  transport.rs
crates/rumon-runner/: Cargo.toml
crates/rumon-runner/src/: command.rs  error.rs  lib.rs  logs.rs  process.rs
crates/rumon-shared/: Cargo.toml
crates/rumon-shared/src/: lib.rs  path.rs  state.rs
crates/rumon-shared/src/events/: mod.rs
crates/rumon-shared/src/models/: mod.rs
crates/rumon-tui/: Cargo.toml
crates/rumon-tui/src/: app.rs  focus.rs  input.rs  keyboard.rs  layout.rs  lib.rs  screen.rs  terminal.rs  theme.rs
crates/rumon-tui/src/panels/: changes.rs  hooks.rs  logs.rs  mod.rs  plugins.rs  profiles.rs  remote.rs  status.rs
crates/rumon-tui/src/ratatui_renderer/: changes.rs  chrome.rs  dialog.rs  logs.rs  mod.rs  style.rs
crates/rumon-tui/src/widgets/: dialog.rs  footer.rs  mod.rs  scroll.rs  search.rs  status_bar.rs
crates/rumon-watch/: Cargo.toml
crates/rumon-watch/src/: backend.rs  event_mapper.rs  filter.rs  lib.rs  native.rs  notify_mapper.rs  snapshot.rs  watcher.rs
profiles/: docker.toml  go.toml  node.toml  python.toml  rust.toml
scripts/: install.ps1  install.sh  release-tag.ps1  release-tag.sh
