[package]
name = "rumon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
rumon-config = { path = "../rumon-config" }
rumon-diff = { path = "../rumon-diff" }
rumon-hooks = { path = "../rumon-hooks" }
rumon-media = { path = "../rumon-media" }
rumon-protocol = { path = "../rumon-protocol" }
rumon-runner = { path = "../rumon-runner" }
rumon-shared = { path = "../rumon-shared" }
rumon-tui = { path = "../rumon-tui" }
rumon-watch = { path = "../rumon-watch" }
base64 = "0.22"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
interprocess = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[lints]
workspace = true
