[package]
name = "rumon-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
rumon-shared = { path = "../rumon-shared" }
similar = "2.7"

[lints]
workspace = true
