[package]
name = "rumon-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
rumon-shared = { path = "../rumon-shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
