[package]
name = "rumon-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
rumon-shared = { path = "../rumon-shared" }

[lints]
workspace = true
